--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,9 @@
               ngModel
               name="email"
               required
-              email>
+              email
+              #e="ngModel">
+            <span class="help-block" *ngIf="!e.valid && e.touched">Please enter a valid email!</span>
           </div>
         </div>
         <div class="form-group">
