TD: Using Pattern Validator - Out of course

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,8 @@
               class="form-control"
               ngModel
               name="username"
-              required>
+              required
+              pattern="[a-zA-Z ]*">
           </div>
           <button class="btn btn-default" type="button">Suggest a Username</button>
           <div class="form-group">
