--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,10 @@
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <!-- <form (ngSubmit)="onSubmit(f)" #f="ngForm"> -->
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div 
+          id="user-data" 
+          ngModelGroup="userData"
+          #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input 
@@ -37,6 +40,7 @@
             <span class="help-block" [ngStyle]="{'visibility':!e.valid && e.touched ? 'visible' : 'hidden'}">Please enter a valid email!</span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User Data is invalid</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <!-- <select 
