TD: Setting and Patching Form Values

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,10 @@
               required
               pattern="[a-zA-Z ]*">
           </div>
-          <button class="btn btn-default" type="button">Suggest a Username</button>
+          <button 
+            class="btn btn-default" 
+            type="button"
+            (click)="suggestUserName()">Suggest a Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input 
