--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,35 @@
 <!-- When you place ngModel on the input type or the select type than only, 
   it is passed in the values array of the form element -->
 
-<!-- This example contains all 3 forms of ngModel, 1) no binding, 2) One way binding and 3) Two way binding-->
+<!-- This example contains all 3 forms of ngModel, 
+  1) no binding, 
+  2) One way binding and 
+  3) Two way binding-->
 
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+
+      <!-- This "ngForm" is very important to get the javascript representation of the form,
+           and it has to be ngForm only, and nothing else -->
+      <!-- It is important so that angular can convert the form into javascript object
+            and then we can use javascript attributes in our form -->
+      <!-- ngModelGroup is also a directive like ngModel, it creates a group of ngModel
+          directive, example it creates a group for name and email, that means in our javascript 
+            representation of the form the name and email would come under userData attribute,
+            also it will create a userdata control under controls array. 
+          And now with we can get this resference to form with the help of #userData="ngModelGroup"
+          to use the attributes of the javascript representation created under userdata controls-->
+      
+      <!-- Overall Summary is
+          #f="ngForm" -> To get the javascript for the form, and use attibutes like value
+          ngModel -> Important directive to be placed so that angular can know it is a part of
+                     the form and can create appropriate controls for it
+          #e="ngModel" -> To get reference of this element to use the attributes in the template
+          ngModelGroup="userData" -> Important directive to be placed so that angular 
+                    can know it is a part of the form and can create a group of
+                    controls for it with the name "userData"
+          #userData="ngModelGroup" To get the reference of this group and use thir properties-->
       <!-- <form (ngSubmit)="onSubmit(f)" #f="ngForm"> -->
       <form (ngSubmit)="onSubmit()" #f="ngForm">
         <div 
@@ -20,7 +44,7 @@
               id="username" 
               class="form-control"
               ngModel
-              name="username"
+              name="nameOfUser"
               required
               pattern="[a-zA-Z ]*">
           </div>
@@ -35,12 +59,18 @@
               id="email" 
               class="form-control"
               ngModel
-              name="email"
+              name="emailofuser"
               required
               email
               #e="ngModel">
-            <!-- <span class="help-block" *ngIf="!e.valid && e.touched">Please enter a valid email!</span> -->
-            <span class="help-block" [ngStyle]="{'visibility':!e.valid && e.touched ? 'visible' : 'hidden'}">Please enter a valid email!</span>
+            <!-- #e="ngModel" we get the reference to this element so that we use control of this 
+                element-->
+            <!-- email is a directive -->
+            <!-- <span class="help-block" 
+              *ngIf="!e.valid && e.touched">Please enter a valid email!</span> -->
+            <span class="help-block" 
+              [ngStyle]="{'visibility':!e.valid && e.touched ? 'visible' : 'hidden'}">
+              Please enter a valid email!</span>
           </div>
         </div>
         <p *ngIf="!userData.valid && userData.touched">User Data is invalid</p>
@@ -50,6 +80,22 @@
             id="secret" 
             class="form-control"
             ngModel
+            name="secret">
+            <option value="pet">Your first Pet?</option>
+            <option value="teacher">Your first teacher?</option>
+          </select> -->
+          <!-- <select 
+            id="secret" 
+            class="form-control"
+            ngModel="teacher"
+            name="secret">
+            <option value="pet">Your first Pet?</option>
+            <option value="teacher">Your first teacher?</option>
+          </select> -->
+          <!-- <select 
+            id="secret" 
+            class="form-control"
+            [ngModel]="'teacher'"
             name="secret">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
